@@ -25,8 +25,8 @@ void
 init ()
 {
     static bool s_init = false ;
-
     if (!s_init) {
+        Glib::init () ;
         gtksourceview::wrap_init () ;
         s_init = true ;
     }
