@@ -1,4 +1,4 @@
-noinst_PROGRAMS=runtestbasic runtestlangs runtestsearch
+noinst_PROGRAMS=runtestbasic runtestlangs runtestsearch runtestmimetypes
 
 runtestbasic_SOURCES=test-basic.cpp
 runtestbasic_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
@@ -9,7 +9,10 @@ runtestlangs_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
 runtestsearch_SOURCES=test-search.cpp
 runtestsearch_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
 
-INCLUDES=-I$(top_srcdir)/gtksourceview \
+runtestmimetypes_SOURCES=test-mime-types.cpp
+runtestmimetypes_LDFLAGS=@GTKSOURCEVIEWMM_LIBS@
+
+INCLUDES=-I$(top_srcdir) -I$(top_srcdir)/gtksourceview \
 @GTKSOURCEVIEWMM_CFLAGS@
 
 LDADD=$(top_builddir)/gtksourceview/gtksourceviewmm/libgtksourceviewmm-1.0.la
