@@ -1,3 +1,13 @@
+Sun, 21 Jan 2007 16:43:39 +0100 Dodji Seketeli
+
+	* docs/reference/reference-index.txt: updated mailing list information
+	  on the website
+	* gtksourceview/gtksourceviewmm/init.cc: call Glib::init() in the
+	  init function so that people can call gtksourceview::init() only
+	  when they need to use non graphical stuff.
+	* tests/test-mime-types.cpp: added this test case to make
+	  sure mime type related stuff works.
+
 ================== 0.3.0 release =============================
 
 Sun, 21 Jan 2007 12:22:02 +0100 Dodji Seketeli
